--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 # protect data without ignoring the directory itself
 data/*
 !data/.gitkeep
+
+# ignore miscellaneous files
+misc/*
+!misc/.gitkeep
