--- a/simUtils/NAMESPACE
+++ b/simUtils/NAMESPACE
@@ -3,8 +3,8 @@
 export(compute_alpha_error)
 export(compute_power)
 export(exclude_na_blocks)
-export(get_period_info)
-export(get_split_info)
+export(print_config_to_stderr)
+export(print_data_info_to_stderr)
 export(read_data)
 export(test_h0)
 
