--- a/simUtils/DESCRIPTION
+++ b/simUtils/DESCRIPTION
@@ -13,6 +13,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports:
     data.table,
+    dplyr,
     nparLD
 Suggests: 
     testthat (>= 3.0.0)
