Modify dplyr import to avoid warnings from conflicts with data.table

--- a/simUtils/NAMESPACE
+++ b/simUtils/NAMESPACE
@@ -15,6 +15,7 @@ export(CONFIG)
 
 # manually added imports:
 
-import(data.table)  # in order to access data.table special symbols (such as 
+import(data.table)  # in order to access data.table special symbols (such as
 # ":=", "[]", etc.)
-import(dplyr)
+import(dplyr, except=c("last", "first", "between"))  # needed by gpc,
+# exceptions to avoid import warnings (conflicts with data.table)
