Add documentation for timepoint harmonization

--- a/simUtils/NAMESPACE
+++ b/simUtils/NAMESPACE
@@ -3,6 +3,7 @@
 export(compute_rejection_rate)
 export(exclude_na_blocks)
 export(gpc)
+export(harmonize_period_times)
 export(nparld)
 export(perform_test)
 export(print_config_to_stderr)
